--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@astrojs/tailwind": "^5.1.4",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
+    "aos": "^2.3.4",
     "astro": "^5.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.17"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.7"
   }
 }
